--- a/src/app/item-popup/ItemSockets.scss
+++ b/src/app/item-popup/ItemSockets.scss
@@ -119,7 +119,8 @@
     border: 1px solid #888;
   }
 
-  svg {
+  img,
+  .perk-circle {
     -webkit-touch-callout: none;
     width: calc(32 / 50 * var(--item-size));
     height: calc(32 / 50 * var(--item-size));
@@ -134,7 +135,8 @@
     margin-bottom: 0;
   }
 
-  svg {
+  img,
+  .perk-circle {
     border: none;
     width: calc(32 / 50 * var(--item-size));
     height: calc(32 / 50 * var(--item-size));
@@ -142,7 +144,8 @@
 
   @include phone-portrait {
     padding: 2px;
-    svg {
+    img,
+    .perk-circle {
       width: 32px;
       height: 32px;
     }
